@@ -24,6 +24,7 @@
  ********************************************************************************/
 package org.aoju.bus.gitlab;
 
+import org.aoju.bus.core.lang.Charset;
 import org.aoju.bus.gitlab.GitLabApi.ApiVersion;
 import org.aoju.bus.gitlab.models.*;
 
@@ -778,7 +779,7 @@ public class ProjectApi extends AbstractApi implements Constants {
 
         String projectPath = null;
         try {
-            projectPath = URLEncoder.encode(namespace + "/" + project, "UTF-8");
+            projectPath = URLEncoder.encode(namespace + "/" + project, Charset.DEFAULT_UTF_8;
         } catch (UnsupportedEncodingException uee) {
             throw (new GitLabApiException(uee));
         }
@@ -827,7 +828,7 @@ public class ProjectApi extends AbstractApi implements Constants {
 
         String projectPath = null;
         try {
-            projectPath = URLEncoder.encode(namespace + "/" + project, "UTF-8");
+            projectPath = URLEncoder.encode(namespace + "/" + project, Charset.DEFAULT_UTF_8);
         } catch (UnsupportedEncodingException uee) {
             throw (new GitLabApiException(uee));
         }
