@@ -32,6 +32,7 @@ import com.qiniu.storage.Region;
 import com.qiniu.storage.UploadManager;
 import com.qiniu.util.Auth;
 import org.aoju.bus.core.lang.Assert;
+import org.aoju.bus.core.lang.Charset;
 import org.aoju.bus.core.lang.Normal;
 import org.aoju.bus.core.lang.Symbol;
 import org.aoju.bus.core.toolkit.StringKit;
@@ -84,7 +85,7 @@ public class QiniuYunOssProvider extends AbstractProvider {
             path = this.auth.privateDownloadUrl(path, 3600);
         }
         try {
-            String encodedFileName = URLEncoder.encode(fileKey, "utf-8");
+            String encodedFileName = URLEncoder.encode(fileKey, Charset.DEFAULT_UTF_8);
             String format = String.format("%s/%s", path, encodedFileName);
             return Message.builder()
                     .errcode(Builder.ErrorCode.SUCCESS.getCode())
